# plaza_radio_tui

./: Cargo.toml  readme.md
src/: main.rs  metadata.rs  player.rs  ui.rs
